<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_message"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_send"
            android:onClick="sendMessage" />
    </LinearLayout>

    <Button
        android:id="@+id/startActivityIntent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:hint="@string/button_actionBarActivity"
        android:onClick="startIntent" />

    <Button
        android:id="@+id/startLifecycleIntent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:hint="@string/button_lifecycleActivity"
        android:onClick="startIntent" />

    <Button
        android:id="@+id/startFragmentedIntent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:hint="@string/button_FragmentedActivity"
        android:onClick="startIntent" />

    <Button
        android:id="@+id/startDataStorageIntent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:hint="@string/button_DataStorageActivity"
        android:onClick="startIntent" />

    <Button
        android:id="@+id/startImplicitIntentIntent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:hint="@string/button_implicitIntentActivity"
        android:onClick="startIntent" />


</LinearLayout>
