<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_implicitIntentSection_1"
            android:id="@+id/textView1" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dial"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_dial_intent"
            android:onClick="buttonPress" />

        <Button
            android:id="@+id/button_map"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_map_intent"
            android:onClick="buttonPress" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_web_intent"
            android:onClick="buttonPress" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_email_intent"
            android:onClick="buttonPress" />

        <Button
            android:id="@+id/button_calendar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_calendar_intent"
            android:onClick="buttonPress" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_app_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_show_app_chooser_on"
            android:textOff="@string/toggle_show_app_chooser_off"
            android:checked="true"
            android:onClick="toggleAppChooser" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_implicitIntentSection_2"
            android:id="@+id/textView2" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_get_contact_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_get_contact_details"
            android:onClick="getContactInfo" />
    </LinearLayout>

</LinearLayout>